--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react": "^6.16.0",
     "copy-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^2.24.1",
+    "react-bootstrap": "^0.30.6",
     "webpack": "^1.13.3"
   }
 }
